--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 100px 50px 1fr 50px;
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +21,36 @@
 
 .header {
   background-color: #393f4d;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-column: 1 / -1;
+}
+
+.header .logo {
+    justify-self: left;
 }
 
 .menu ul,
 .menu li {
-  font-size: 16px;
+    font-size: 16px;
+}
+
+.menu {
+    display: grid;
+    align-content: center;
+}
+
+.menu ul {
+    display: grid;
+    list-style: none;
+    grid-template-columns: repeat(4, 1fr);
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-row: 2/ span 2;
+  display: grid;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -36,7 +61,6 @@
   border-radius: 10px;
 }
 
-
 .sidebar .side-content {
   background-color: white;
   color: black;
@@ -44,17 +68,32 @@
   font-weight: normal;
 }
 
+.sidebar div, .sidebar p {
+    display: grid;
+    align-content: center;
+}
+
 .nav {
   background-color: #FF7755;
+}
+
+.nav ul {
+    display: grid;
+    grid-template-columns: repeat( 3, 1fr);
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
 }
 
 .article {
   background-color: #bccbde;
+  grid-row: 3 / 4;
+  display: grid;
+  grid-template-columns: repeat( auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -68,6 +107,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,6 +123,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / -1;
 }
 
 .footer p {
